IS-64 Updated dependencies to latest versions